Fix inconsistent text alignment

--- a/style.css
+++ b/style.css
@@ -119,7 +119,8 @@ h2 {
   text-align: left;
 }
 
-.section p {
+.section p,
+.section li {
   text-align: justify;
 }
 
